
PHP Timeclock  2.1.0  released 2018-04-23
  New features
    - Track punch office/location independent of IP address
    - Include css/local.css in headers for local customizations
  Potentially incompatible changes
    - Update time stamp handling, check your timestamps carefully
  Bug fixes
    - Regular expression fixes in timedelete and timeadd
    - Clean/fix up more database interactions making queries more robust
      against changes or attacks

PHP Timeclock  2.0.0  released 2017-03-09
  New feature
    - Barcode punch in/out




1.04  11/15/07
-----------------------
--- BUG #1510062: Modified sysedit.php and config.inc.php to fix allowed_networks
    bug.
--- BUG #1532762: Modified SHOW TABLE statements to correct typo. Also modified
    (but didn't test) the upgrade script to account for wildcards.
--- BUG #1544207: Modified report files to fix bad cancel link.
--- BUG #1713146: Modified files using gmdate to prevent possible race condition.

1.03  6/20/06
-----------------------
--- Fixed a bug in the Audit Log report where incorrect dates and times were
    being displayed. (Thanks to Brett Moss for finding this bug.)
--- Fixed a bug in the Total Hours report where incorrect dates were being
    displayed. (Thanks to Brett Moss for finding this bug.)
--- Fixed numerous other bugs in the Total Hours report. (Thanks to Brett Moss
    for finding these bugs.)


1.02  6/5/06
-----------------------
--- Fixed numerous bugs in the Edit Time page concerning European style dates.
    The times would not always be edited if $calendar_style = "euro" in
    config.inc.php.
--- Fixed a bug in the Delete Time page concerning European style dates. The times
    would not always delete if $calendar_style = "euro" in config.inc.php.
--- Fixed a bug in the Add Time page concerning European style dates. The time
    would not always add if $calendar_style = "euro" in config.inc.php. And if by
    chance it DID add, it would not add it for the day specified.